--- a/.roadhogrc
+++ b/.roadhogrc
@@ -1,5 +1,7 @@
 {
   "entry": "src/index.js",
+  "disableCSSModules": true,
+  "less": true,
   "env": {
     "development": {
       "extraBabelPlugins": [
