--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "babel-runtime": "^6.9.2",
+    "classnames": "^2.2.5",
     "dva": "^2.1.0",
-    "react": "^15.4.0",
-    "react-dom": "^15.4.0"
+    "framework7": "^2.0.0-beta.17",
+    "framework7-react": "^0.9.3-2",
+    "prop-types": "^15.6.0",
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
