--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
     "install-node": "6.11.1"
   },
   "dependencies": {
+    "antd-mobile": "^2.0.3",
     "babel-runtime": "^6.9.2",
     "classnames": "^2.2.5",
     "dva": "^2.1.0",
-    "framework7": "^2.0.0-beta.17",
-    "framework7-react": "^0.9.3-2",
     "prop-types": "^15.6.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1"
@@ -22,6 +21,7 @@
   "devDependencies": {
     "babel-eslint": "^7.1.1",
     "babel-plugin-dva-hmr": "^0.3.2",
+    "babel-plugin-import": "^1.6.2",
     "babel-plugin-transform-runtime": "^6.9.0",
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "^13.0.0",
@@ -30,6 +30,7 @@
     "eslint-plugin-react": "^6.8.0",
     "expect": "^1.20.2",
     "husky": "^0.12.0",
+    "postcss-pxtorem": "^4.0.1",
     "redbox-react": "^1.4.3",
     "roadhog": "^1.2.1"
   }
