--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,23 @@
 {
   "parser": "babel-eslint",
   "extends": "airbnb",
+  "globals" : {
+    "window":true,
+    "document":true
+  },
   "rules": {
     "arrow-body-style": [0],
     "consistent-return": [0],
     "generator-star-spacing": [0],
     "global-require": [1],
     "import/extensions": [0],
+    "react/no-multi-comp": [0],
     "import/no-extraneous-dependencies": [0],
     "import/no-unresolved": [0],
     "import/prefer-default-export": [0],
     "jsx-a11y/no-static-element-interactions": [0],
     "no-bitwise": [0],
+    "no-fallthrough": [0],
     "no-cond-assign": [0],
     "no-else-return": [0],
     "no-nested-ternary": [0],
