--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "babel-runtime": "^6.9.2",
     "classnames": "^2.2.5",
     "dva": "^2.1.0",
+    "lodash": "^4.17.4",
     "prop-types": "^15.6.0",
+    "rc-form": "^2.0.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1"
   },
