--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "antd-mobile": "^2.0.3",
+    "axios": "^0.17.1",
     "babel-runtime": "^6.9.2",
     "classnames": "^2.2.5",
     "dva": "^2.1.0",
