--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
     "document":true
   },
   "rules": {
+    "no-plusplus": [0],
     "arrow-body-style": [0],
     "consistent-return": [0],
     "generator-star-spacing": [0],
