--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-runtime": "^6.9.2",
     "classnames": "^2.2.5",
     "dva": "^2.1.0",
+    "dva-loading": "^1.0.4",
     "lodash": "^4.17.4",
     "prop-types": "^15.6.0",
     "rc-form": "^2.0.0",
@@ -37,6 +38,7 @@
     "postcss-pxtorem": "^4.0.1",
     "react-sticky": "^6.0.1",
     "redbox-react": "^1.4.3",
-    "roadhog": "^1.2.1"
+    "roadhog": "^1.2.1",
+    "vconsole": "^3.0.0"
   }
 }
