--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "scripts": {
     "start": "roadhog server",
     "build": "roadhog build",
-    "lint": "eslint --ext .js src test",
-    "precommit": "npm run lint"
+    "lint": "eslint --ext .js src test"
   },
   "engines": {
     "install-node": "6.11.1"
@@ -16,6 +15,9 @@
     "classnames": "^2.2.5",
     "dva": "^2.1.0",
     "dva-loading": "^1.0.4",
+    "jroll": "^2.6.0",
+    "jroll-infinite": "^2.2.0",
+    "jroll-lite": "^2.4.11",
     "lodash": "^4.17.4",
     "prop-types": "^15.6.0",
     "rc-form": "^2.0.0",
