--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "prop-types": "^15.6.0",
     "rc-form": "^2.0.0",
     "react": "^16.1.1",
-    "react-dom": "^16.1.1"
+    "react-dom": "^16.1.1",
+    "socket.io-client": "^2.0.4"
   },
   "devDependencies": {
     "antd-mobile-demo-data": "^0.1.4",
@@ -44,12 +45,15 @@
     "husky": "^0.12.0",
     "koa": "^2.0.0-alpha.8",
     "koa-better-router": "^2.1.1",
+    "koa-bodyparser": "^4.2.0",
     "koa-route": "^3.2.0",
+    "koa-router": "^7.3.0",
     "koa-static": "^4.0.2",
     "koa-static-server": "^1.3.2",
     "postcss-pxtorem": "^4.0.1",
     "react-sticky": "^6.0.1",
     "redbox-react": "^1.4.3",
+    "request": "^2.83.0",
     "roadhog": "^1.2.1",
     "socket.io": "^2.0.4",
     "vconsole": "^3.0.0"
