--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "rc-form": "^2.0.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
-    "socket.io-client": "^2.0.4"
+    "socket.io-client": "^2.0.4",
+    "tween-functions": "^1.2.0"
   },
   "devDependencies": {
     "antd-mobile-demo-data": "^0.1.4",
