--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prop-types": "^15.6.0",
     "rc-form": "^2.0.0",
     "react": "^16.1.1",
+    "react-amap": "^1.1.3",
     "react-dom": "^16.1.1",
     "socket.io-client": "^2.0.4",
     "tween-functions": "^1.2.0"
