--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "private": true,
   "scripts": {
-    "dev": "roadhog server",
-    "build": "roadhog build",
-    "lint": "eslint --ext .js src test",
-    "precommit": "npm run lint -- --fix",
-    "start": "nodemon server/index.js"
+    "build:client": "npm run clear && webpack --config build/webpack.config.client.js",
+    "build:server": "webpack --config build/webpack.config.server.js",
+    "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
+    "dev:server": "nodemon server/server.js",
+    "clear": "rimraf dist",
+    "lint": "eslint --ext .js src test build",
+    "precommit": "npm run lint -- --fix"
   },
   "engines": {
     "install-node": "6.11.1"
@@ -17,6 +19,7 @@
     "classnames": "^2.2.5",
     "dva": "^2.1.0",
     "dva-loading": "^1.0.4",
+    "extract-text-webpack-plugin": "^3.0.2",
     "iscroll": "^5.2.0",
     "jroll": "^2.6.0",
     "jroll-infinite": "^2.2.0",
@@ -33,19 +36,28 @@
   },
   "devDependencies": {
     "antd-mobile-demo-data": "^0.1.4",
+    "autoprefixer": "^7.2.1",
     "babel-eslint": "^7.1.1",
+    "babel-loader": "^7.1.2",
     "babel-plugin-dva-hmr": "^0.3.2",
     "babel-plugin-import": "^1.6.2",
     "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2015-loose": "^8.0.0",
+    "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
     "cheerio": "^1.0.0-rc.2",
     "cookie-parser": "^1.4.3",
+    "cross-env": "^5.1.1",
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "^13.0.0",
+    "eslint-loader": "^1.9.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.8.0",
     "expect": "^1.20.2",
+    "file-loader": "^1.1.5",
     "husky": "^0.12.0",
     "koa": "^2.0.0-alpha.8",
     "koa-better-router": "^2.1.1",
@@ -54,12 +66,18 @@
     "koa-router": "^7.3.0",
     "koa-static": "^4.0.2",
     "koa-static-server": "^1.3.2",
+    "postcss-loader": "^2.0.9",
     "postcss-pxtorem": "^4.0.1",
+    "react-hot-loader": "^3.1.3",
     "react-sticky": "^6.0.1",
     "redbox-react": "^1.4.3",
     "request": "^2.83.0",
     "roadhog": "^1.2.1",
     "socket.io": "^2.0.4",
-    "vconsole": "^3.0.0"
+    "style-loader": "^0.19.0",
+    "svg-sprite-loader": "^3.4.1",
+    "url-loader": "^0.6.2",
+    "vconsole": "^3.0.0",
+    "webpack-merge": "^4.1.1"
   }
 }
