--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "dev": "roadhog server",
     "build": "roadhog build",
+    "build:dll": "roadhog buildDll",
     "lint": "eslint --ext .js src test",
     "precommit": "npm run lint -- --fix",
     "start": "nodemon server/index.js"
@@ -58,7 +59,7 @@
     "react-sticky": "^6.0.1",
     "redbox-react": "^1.4.3",
     "request": "^2.83.0",
-    "roadhog": "^1.2.1",
+    "roadhog": "^1.3.1",
     "socket.io": "^2.0.4",
     "vconsole": "^3.0.0"
   }
