--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react": "^16.1.1",
     "react-amap": "^1.1.3",
     "react-dom": "^16.1.1",
-    "socket.io-client": "^2.0.4",
+    "socket.io": "^2.0.4",
+    "socket.io-client": "2.0.4",
     "tween-functions": "^1.2.0"
   },
   "devDependencies": {
@@ -60,7 +61,6 @@
     "redbox-react": "^1.4.3",
     "request": "^2.83.0",
     "roadhog": "^1.3.1",
-    "socket.io": "^2.0.4",
     "vconsole": "^3.0.0"
   }
 }
