--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "koa-router": "^7.3.0",
     "koa-static": "^4.0.2",
     "koa-static-server": "^1.3.2",
+    "nodemon": "^1.18.11",
     "postcss-pxtorem": "^4.0.1",
     "react-sticky": "^6.0.1",
     "redbox-react": "^1.4.3",
